--- a/booking.html
+++ b/booking.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html><html lang="ar" dir="rtl"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>احجز الآن — Premium</title><link rel="stylesheet" href="style.css"></head><body>
+<title>احجز الآن — Premium</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="assets/css/style.css"></head><body>
 
 <header class="header">
   <div class="container headerbar">
-    <a class="brand" href="index.html"><img src="logo.png" alt="" width="40" height="40"><h1>فندق المها — Premium</h1></a>
+    <a class="brand" href="index.html"><img src="assets/img/logo.png" alt="" width="40" height="40"><h1>فندق المها — Premium</h1></a>
     <nav class="nav" aria-label="التنقل">
       <a href="index.html" >الرئيسية</a>
-      <a href="rooms.html" >الغرف</a>
-      <a href="amenities.html" >الخدمات</a>
-      <a href="booking.html" aria-current="page">احجز الآن</a>
-      <a href="reviews.html" >آراء</a>
-      <a class="btn" href="admin.html">لوحة الإدارة</a>
+      <a href="pages/rooms.html" >الغرف</a>
+      <a href="pages/amenities.html" >الخدمات</a>
+      <a href="pages/booking.html" aria-current="page">احجز الآن</a>
+      <a href="pages/reviews.html" >آراء</a>
+      <a class="btn" href="pages/admin.html">لوحة الإدارة</a>
     </nav>
   </div>
 </header>
@@ -50,8 +50,8 @@
   </div>
 </div></section>
 <script type="module">
-  import {{ rooms }} from './data.js';
-  import {{ wireBooking }} from './app.js';
+  import {{ rooms }} from '../assets/js/data.js';
+  import {{ wireBooking }} from '../assets/js/app.js';
   const sel = document.getElementById('roomSel');
   sel.innerHTML = rooms.map(r=>`<option value='${r.title}'>${r.title} — ${r.price}$</option>`).join('');
   const q = new URLSearchParams(location.search).get('room');
@@ -63,7 +63,7 @@
 <footer class="footer"><div class="container">© 2025 فندق المها — إصدار Premium (تعليمي).</div></footer>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="module">
-  import { bootCounters  , wireBooking } from './app.js';
+  import { bootCounters  , wireBooking } from './assets/js/app.js';
   bootCounters();
    , wireBooking
 </script>
