--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html><html lang="ar" dir="rtl"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>فندق المها — Premium — الرئيسية</title><link rel="stylesheet" href="style.css"></head><body>
+<title>فندق المها — Premium — الرئيسية</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="assets/css/style.css"></head><body>
 
 <header class="header">
   <div class="container headerbar">
-    <a class="brand" href="index.html"><img src="logo.png" alt="" width="40" height="40"><h1>فندق المها — Premium</h1></a>
+    <a class="brand" href="index.html"><img src="assets/img/logo.png" alt="" width="40" height="40"><h1>فندق المها — Premium</h1></a>
     <nav class="nav" aria-label="التنقل">
       <a href="index.html" aria-current="page">الرئيسية</a>
-      <a href="rooms.html" >الغرف</a>
-      <a href="amenities.html" >الخدمات</a>
-      <a href="booking.html" >احجز الآن</a>
-      <a href="reviews.html" >آراء</a>
-      <a class="btn" href="admin.html">لوحة الإدارة</a>
+      <a href="pages/rooms.html" >الغرف</a>
+      <a href="pages/amenities.html" >الخدمات</a>
+      <a href="pages/booking.html" >احجز الآن</a>
+      <a href="pages/reviews.html" >آراء</a>
+      <a class="btn" href="pages/admin.html">لوحة الإدارة</a>
     </nav>
   </div>
 </header>
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="gallery fade-up">
-      <img id="galleryImg" src="hero1.jpg" alt="معرض الفندق">
+      <img id="galleryImg" src="assets/img/hero1.jpg" alt="معرض الفندق">
       <div class="dots"><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
     </div>
   </div>
@@ -44,17 +44,17 @@
   <div class="card-grid" id="roomsCards"></div>
 </div></section>
 <script type="module">
-  import {{ initSlider }} from './app.js'; initSlider();
-  import {{ rooms }} from './data.js';
+  import {{ initSlider }} from './assets/js/app.js'; initSlider();
+  import {{ rooms }} from './assets/js/data.js';
   const box = document.getElementById('roomsCards');
-  box.innerHTML = rooms.slice(0,3).map(r=>`<article class='card fade-up'><h3>${r.title}</h3><p class='meta'>${r.beds} • ${r.size}</p><p><b style='color:#f0d07a'>${r.price}$</b> / الليلة</p><p>${r.tags.map(t=>`<span class='badge'><span class='dot'></span>${t}</span>`).join(' ')}</p><a class='btn' href='booking.html?room=${r.id}'>احجز هذا</a></article>`).join('');
+  box.innerHTML = rooms.slice(0,3).map(r=>`<article class='card fade-up'><h3>${r.title}</h3><p class='meta'>${r.beds} • ${r.size}</p><p><b style='color:#f0d07a'>${r.price}$</b> / الليلة</p><p>${r.tags.map(t=>`<span class='badge'><span class='dot'></span>${t}</span>`).join(' ')}</p><a class='btn' href='pages/booking.html?room=${r.id}'>احجز هذا</a></article>`).join('');
 </script>
 
 
 <footer class="footer"><div class="container">© 2025 فندق المها — إصدار Premium (تعليمي).</div></footer>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="module">
-  import { bootCounters  , initSlider } from './app.js';
+  import { bootCounters  , initSlider } from './assets/js/app.js';
   bootCounters();
    , initSlider
 </script>
