--- a/rooms.html
+++ b/rooms.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html><html lang="ar" dir="rtl"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>الغرف — Premium</title><link rel="stylesheet" href="style.css"></head><body>
+<title>الغرف — Premium</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="assets/css/style.css"></head><body>
 
 <header class="header">
   <div class="container headerbar">
-    <a class="brand" href="index.html"><img src="logo.png" alt="" width="40" height="40"><h1>فندق المها — Premium</h1></a>
+    <a class="brand" href="index.html"><img src="assets/img/logo.png" alt="" width="40" height="40"><h1>فندق المها — Premium</h1></a>
     <nav class="nav" aria-label="التنقل">
       <a href="index.html" >الرئيسية</a>
-      <a href="rooms.html" aria-current="page">الغرف</a>
-      <a href="amenities.html" >الخدمات</a>
-      <a href="booking.html" >احجز الآن</a>
-      <a href="reviews.html" >آراء</a>
-      <a class="btn" href="admin.html">لوحة الإدارة</a>
+      <a href="pages/rooms.html" aria-current="page">الغرف</a>
+      <a href="pages/amenities.html" >الخدمات</a>
+      <a href="pages/booking.html" >احجز الآن</a>
+      <a href="pages/reviews.html" >آراء</a>
+      <a class="btn" href="pages/admin.html">لوحة الإدارة</a>
     </nav>
   </div>
 </header>
@@ -21,16 +21,16 @@
   <div id="roomsGrid" class="card-grid"></div>
 </div></section>
 <script type="module">
-  import {{ rooms }} from './data.js';
+  import {{ rooms }} from '../assets/js/data.js';
   const grid = document.getElementById('roomsGrid');
-  grid.innerHTML = rooms.map(r=>`<article class='card fade-up'><img src='${r.img}' alt='${r.title}' style='border-radius:12px;margin-bottom:.6rem'><h3>${r.title}</h3><p class='meta'>${r.beds} • ${r.size}</p><p><b style='color:#f0d07a'>${r.price}$</b> / الليلة</p><a class='btn' href='booking.html?room=${r.id}'>احجز الآن</a></article>`).join('');
+  grid.innerHTML = rooms.map(r=>`<article class='card fade-up'><img src='../assets/img/${r.img}' alt='${r.title}' style='border-radius:12px;margin-bottom:.6rem'><h3>${r.title}</h3><p class='meta'>${r.beds} • ${r.size}</p><p><b style='color:#f0d07a'>${r.price}$</b> / الليلة</p><a class='btn' href='booking.html?room=${r.id}'>احجز الآن</a></article>`).join('');
 </script>
 
 
 <footer class="footer"><div class="container">© 2025 فندق المها — إصدار Premium (تعليمي).</div></footer>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="module">
-  import { bootCounters  } from './app.js';
+  import { bootCounters  } from './assets/js/app.js';
   bootCounters();
   
 </script>
